Bug 382562 - Hidden menu in kmail composer: no (obvious?) way to get it back (or hide it)
Summary: Hidden menu in kmail composer: no (obvious?) way to get it back (or hide it)
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 5.5.2
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-21 10:31 UTC by Achim Bohnet
Modified: 2017-12-27 09:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Achim Bohnet 2017-07-21 10:31:17 UTC
KDE neon user edition: 5.5.3: For whatever reason the menu in the my kmail composer is hidden.  Now there no obvious way to get it back:

 * Crtl-M, or Ctrl-<modifier>-M does not work (shift,alt,super)
 * No RMB Menu has such an action.
 * I've created a new user: kmail composer has menu, but I've found no way
   to hide the menu. I've expected to get a hint how to undo when hidding.

Expected Behaviour:

* Ctrl-Shift-M  hide/shows menu (I guess Ctrl-M is in use by the input/text fields, so ctrl-shift has to be used like in konsole)
* A menu item in Settings to show/hide menu like in kmail main window.

Achim

P.S. in b.k.o kmail version 5.5.3 is not in the list of available versions. Hint hint ;-)
P.P.S I assume that menu was hidden when switching the global menu: menu plasmoid, window title and application, I'll file a new report when I can reproduce how to hide the menu
Comment 1 Allen Winter 2017-07-21 11:47:39 UTC
Look in .config/kmail2rc

search for the [Composer] section
in there you'll probably see the line "MenuBar=Disabled"..  remove that line.

You'll want to quit Kontact/Kmail first.

This happened to me once when I was playing with various Window Manager settings, I believe.  I'm not sure if this is a KMail bug or some kind of plasma/WM bug.
Comment 2 Achim Bohnet 2017-07-21 12:32:42 UTC
Thx, Allen!!  I've my menu back :-)

Nevertheless IMHO, that's not 'obvious' for the average desktop/pim user.
So a shortcut + menu entry would be very welcome.

Thx again Allen and all PIMsters for all your work!
Achim
Comment 3 Laurent Montel 2017-12-26 06:04:11 UTC
Git commit f1bafd1a4e30ea1ab1bf1bf2d57adf3322a8b27e by Laurent Montel.
Committed on 26/12/2017 at 06:03.
Pushed by mlaurent into branch 'master'.

Fix Bug 382562 - Hidden menu in kmail composer: no (obvious?) way to get it back (or hide it)

FIXED-IN: 5.8.0

(adding action for show or not menubar)

M  +26   -0    src/editor/kmcomposerwin.cpp
M  +3    -0    src/editor/kmcomposerwin.h
M  +2    -1    src/kmcomposerui.rc
M  +7    -0    src/settings/kmail.kcfg.cmake

https://commits.kde.org/kmail/f1bafd1a4e30ea1ab1bf1bf2d57adf3322a8b27e
Comment 4 Achim Bohnet 2017-12-27 09:38:03 UTC
Thx a lot Laurent!