Fix Bug 382562 - Hidden menu in kmail composer: no (obvious?) way to get it back (or hide it)

FIXED-IN: 5.8.0
BUG: 382562

(adding action for show or not menubar)