src/settings/kmail.kcfg.cmake
@@ -132,6 +132,13 @@
         <label></label>
         <whatsthis></whatsthis>
       </entry>
+      <entry key="ComposerShowMenuBar" type="Bool">
+        <default>true</default>
+         <!-- label and whatsthis are already provided by KStandardAction::showMenubar -->
+        <label></label>
+        <whatsthis></whatsthis>
+      </entry>
+
     </group>
 <!-- General -->
 
